--- a/lodIndex.html
+++ b/lodIndex.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>דף ראשי</title>
-    <link rel="stylesheet" href="style.css">
+    <title>אנשים שגרים בלוד:</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
-    <div id="emptyDiv"></div>
-    <section id="showPeopleInfo">
-        <h2>All people:</h2>
-    </section>
+    <div id="divOfPeopleLod">
+        <h1>People How lives in Lod : </h1>
+    </div>
 
     <script src="./main.js"></script>
-    <script src="./another.js"></script>
+    <script src="./lod.js"></script>
+
 
 </body>
 </html>
